# zenkat-py

./: .gitignore  README  README.md  infix-plus-peg.txt  language_spec.md  pyproject.toml  requirements.txt  todo.md  zen_cli.py  zenkat.py  zk.py
docs/: fields.md  filters.md  formatting.md  grep.md  macros.md  pipeline.md  queries.md  sort.md  tasks.md  todo.md  usage.md
example/: index.md
example/notes/: chapter 1.md  chapter-1.md  daily_2.md  daily_3.md  long-item.md  todo.md
src/zenkat/: __main__.py  config.py  default_config.py  extract.py  fields.py  filter.py  format.py  group.py  index.py  objects.py  query.py  render.py  sort.py  utils.py  zenkat.py  zk.py
src/zenkat/cmd/: __init__.py  cat.py  echo.py  grep.py  list.py  macro.py  outline.py  query.py  tasks.py  themes.py  utils.py
src/zenkat_fd93/: zk.py
themes/: catgirl.toml  catpuccin-mocha.toml  dracula.toml  lemon-bars.toml  lemonbars.toml  monokai.toml  nord-frost.toml  solarized-dark.toml  tokyo-night.toml
