[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "zenkat"
version = "0.1.1"
authors = [
  {name = "Frank Davies", email= "frank@fd93.me"}
]
description = "CLI tool to allow using flat files as a Zettelkasten system, similar to Obsidian."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "Operating System :: OS Independent"
]
dependencies = [
"python-dateutil",
"PyYAML",
"rich"
]
[project.urls]
"Homepage" = "https://github.com/fdavies93/zenkat"
"Repository" = "https://github.com/fdavies93/zenkat"
[project.scripts]
zenkat = "zenkat.zk:main"